# OSCeleton

./: .gitignore  Makefile  OSCeleton.sln  README  README.md  Wishlist  david_dancing.osceleton
OSCeleton/: OSCeleton.cpp  OSCeleton.vcproj
OSCeleton/Debug/: BuildLog.htm  OSCeleton.exe.embed.manifest.res  mt.dep  vc90.idb
OSCeleton/Release/: BuildLog.htm  mt.dep  vc90.idb
OSCeleton/lib/: WSock32.Lib
liblo-0.26/: ChangeLog  Makefile  Makefile.am  NEWS  TODO  config.h  config.h.in  config.status  configure  configure.ac  liblo.pc  libtool
liblo-0.26-modified/: AUTHORS  Makefile.in  README  aclocal.m4  autogen.sh  liblo.pc.in  libtool
liblo-0.26-modified/autom4te.cache/: output.2  requests  traces.1
liblo-0.26-modified/doc/: Makefile  reference.doxygen.in
liblo-0.26-modified/examples/: Example - Copy.vcproj  Example.sln  Example.vcproj  Makefile  Makefile.in  example_server.c  log  nonblocking_server_example.c
liblo-0.26-modified/examples/Release/: Example.exe.embed.manifest.res  mt.dep  vc90.idb
liblo-0.26-modified/lo/: Makefile  lo.h
liblo-0.26-modified/src/: send.c
liblo-0.26-modified/src/tools/: Makefile  Makefile.am  Makefile.in  README  oscdump.c
liblo-0.26/autom4te.cache/: output.0  output.1  traces.0  traces.2
liblo-0.26/doc/: Makefile  Makefile.in  reference.doxygen
liblo-0.26/examples/: Makefile  Makefile.am  example_client.c  example_client.c~  log2
liblo-0.26/examples/.deps/: example_client.Po  example_server.Po  nonblocking_server_example.Po
liblo-0.26/examples/Release/: BuildLog.htm
liblo-0.26/lib/DebugDLL/: liblo.idb  liblo_d.exp  liblo_d.ilk  liblo_d.lib  subtest.idb  testlo.idb
liblo-0.26/lib/ReleaseDLL/: liblo.exp  liblo.idb  liblo.lib
liblo-0.26/lib/ReleaseLib/: liblo.idb  liblo.lib
liblo-0.26/lo/: Makefile  Makefile.in
liblo-0.26/src/: Makefile  Makefile.am  Makefile.in  liblo.def  subtest.c  testlo.c
liblo-0.26/src/.deps/: liblo_la-address.Plo  liblo_la-blob.Plo  liblo_la-bundle.Plo  liblo_la-message.Plo  liblo_la-method.Plo  liblo_la-pattern_match.Plo  liblo_la-send.Plo  liblo_la-server.Plo  liblo_la-server_thread.Plo  liblo_la-timetag.Plo  subtest-subtest.Po  testlo-testlo.Po
liblo-0.26/src/tools/: Makefile  oscsend.c
liblo-0.26/src/tools/.deps/: oscdump-oscdump.Po  oscsend-oscsend.Po
osc_tools/: file2osc.c  osc2file.c  osc2text.c
oscpack/: Makefile  Makefile.osx
oscpack/examples/: OscDump.cpp
oscpack/ip/posix/: UdpSocket.cpp
oscpack/ip/win32/: UdpSocket.cpp
oscpack/osc/: OscPrintReceivedElements.cpp
oscpack/tests/: OscReceiveTest.cpp  OscSendTests.cpp  OscUnitTests.cpp
src/: OSCeleton.cpp  OSCeleton.vcproj  common.h  viewer.cpp  viewer.h
